--- a/source/css/ui.css.sass
+++ b/source/css/ui.css.sass
@@ -30,6 +30,9 @@ h1.logo a
   -webkit-box-shadow: 0 0 15px rgba(0,0,0,0.13)
   padding: 5px 20px
 
+.main-content
+  font-size: 0.9em
+
 .article-icon
   padding: 5px 5px 0 0
   text-align: center
