--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -12,10 +12,10 @@ title: "О нас"
 </div>
 
 <div class="row">
-  <div class="four columns">
+  <div class="large-4 columns hide-for-small">
     <%= image_tag "about/alex.png", alt: "Александр Чаплинский" %>
   </div>
-  <div class="eight columns">
+  <div class="large-8 columns">
     <h3>Александр Чаплинский</h3>
     <ul class="inline-list people-social-icons">
       <li><a class="fc-webicon twitter" href="https://twitter.com/chalexr">Twitter</a></li>
@@ -30,7 +30,7 @@ title: "О нас"
 </div>
 
 <div class="row">
-  <div class="eight columns">
+  <div class="large-8 columns">
     <h3>Алексей Васильев</h3>
     <ul class="inline-list people-social-icons">
       <li><a class="fc-webicon twitter" href="https://twitter.com/leopard_me">Twitter</a></li>
@@ -42,7 +42,7 @@ title: "О нас"
     <p>Ruby on Rails разработчик и Linux администратор в компании Railsware. Является автором таких продуктов как: <a href="http://popcornua.coocoorooza.com/">PopCornUA</a>, <a href="http://mongodb-logger.catware.org/">MongodbLogger</a>, <a href="https://github.com/railsware/smt_rails">SmtRails</a>, <a href="http://piro.railsware.com">PIRO</a> и многих других.</p>
     <p>Алексей является автором открытого учебного пособия по <a href="http://postgresql.leopard.in.ua">PostgreSQL на русском языке</a>. Активный докладчик в различных IT конференциях.</p>
   </div>
-  <div class="four columns">
+  <div class="large-4 columns hide-for-small">
     <%= image_tag "about/alexey.png", alt: "Алексей Васильев" %>
   </div>
 </div>
