--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -111,7 +111,7 @@
     <aside class="large-3 columns">
       
       <div class="panel">
-        <h5>Есть чем поделится с нами? <%= hex_mail_to default_email_helper, "Напишите нам." %></h5>
+        <h5>Есть чем поделиться с нами? <%= hex_mail_to default_email_helper, "Напишите нам." %></h5>
       </div>
 
       <h5>Архив</h5>
