--- a/source/partials/_header_bar.html.erb
+++ b/source/partials/_header_bar.html.erb
@@ -5,7 +5,7 @@
       <h1><%= link_to 'Главная', '/' %></h1>
     </li>
     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Меню</span></a></li>
   </ul>
   <section class="top-bar-section">
     <ul class="right">
