--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -9,7 +9,7 @@ per_page: 50
   <% when 'month' %>
     <%= Date.new(year, month, 1).strftime('%b %Y') %>
   <% when 'year' %>
-    <%= year %>
+    <%= year %> год
   <% end %>
 </h1>
 
