--- a/source/api/podcasts.json.erb
+++ b/source/api/podcasts.json.erb
@@ -5,5 +5,9 @@
   description: article.body, 
   date: article.date.to_s(:rfc822), 
   link: "#{default_main_url_helper}#{article.url}", 
-  main_img: (article.data.main_image ? "#{default_main_url_helper}#{article.data.main_image}" : default_image_helper)} 
+  main_img: (article.data.main_image ? "#{default_main_url_helper}#{article.data.main_image}" : default_image_helper),
+  audio_url: article.data.audio_url,
+  audio_file_size: article.data.audio_length,
+  audio_type: (article.data.audio_format || "audio/mpeg"),
+  audio_duration: (article.data.duration ? article.data.duration : "00:30:00")} 
 end) -%>
