--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
 pageable: true
 per_page: 10
 ---
-
+<% content_for :title, "" %>
 <% page_articles.each_with_index do |article, i| %>
   <article>
     <%= partial "partials/article", locals: { article: article } %>
