--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -8,7 +8,7 @@
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <title>
       <% if content_for?(:title) %>
-        <%= yield_content :title %> | <%= default_title_helper %>
+        <%= yield_content(:title).blank? ? default_title_helper : "#{yield_content(:title)} | #{default_title_helper}" %>
       <% else %>
         <%= data.page.title ? "#{data.page.title} | #{default_title_helper}" : default_title_helper %>
       <% end %>
@@ -17,7 +17,7 @@
     <meta name="description" content="<%= default_description_helper %>">
     <link type="text/plain" rel="author" href="/humans.txt" />
     <!-- Set the viewport width to device width for mobile -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/favicons/apple-touch-icon-144x144-precomposed.png">
     <!-- For iPhone with high-resolution Retina display: -->
@@ -58,7 +58,7 @@
       </div>
     </div>
   <![endif]-->
-  
+
   <div class="row">
     <div class="large-4 columns">
       <h1 class="logo">
@@ -69,7 +69,7 @@
       <%= partial "partials/header_bar" %>
     </div>
   </div>
-  
+
   <!-- Nav Bar -->
 
   <div class="row">
@@ -109,7 +109,7 @@
     <!-- Sidebar -->
 
     <aside class="large-3 columns">
-      
+
       <div class="panel">
         <h5>Есть чем поделиться с нами? <%= hex_mail_to default_email_helper, "Напишите нам." %></h5>
       </div>
@@ -121,7 +121,7 @@
         <% end %>
         <li class="divider"></li>
       </ul>
-      
+
       <div class="hide-for-small hide-for-medium show-for-landscape">
         <a class="twitter-timeline" href="https://twitter.com/rwpod" data-widget-id="293816296280297473">Твиты пользователя @rwpod</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
