--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -25,7 +25,7 @@ title: "О нас"
       <li><a class="fc-webicon googleplus" href="https://plus.google.com/102030190358547710801/about">GooglePlus</a></li>
     </ul>
     <p>Ruby on Rails, JavaScript разработчик и cпециалист по верстке в компании Railsware. Является автором таких продуктов как: <a href="https://github.com/railsware/smt_rails">SmtRails</a>, <a href="http://piro.railsware.com">PIRO</a>, <a href="https://github.com/alchapone/smartstart">SmartStart</a>, <a href="https://github.com/alchapone/ajaxform">AjaxForm</a> и многих других.</p>
-    <p>Александр является инструктором по версте в компании Railsware.</p>
+    <p>Александр является инструктором по верстке в компании Railsware.</p>
   </div>
 </div>
 
