--- a/source/posts/2013-02-02-podcast-01-00.md.erb
+++ b/source/posts/2013-02-02-podcast-01-00.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Пилотный подкаст первого сезона
 date: 2013-02-02
-tags: 
+tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/1/download/podfm_rwpod_my_20130202.mp3"
 audio_mirror: "https://dl.dropbox.com/s/t6ugsp3ld56maq5/0100.mp3?dl=1"
@@ -24,15 +24,15 @@ small_icon: mic
  - [Тестирование с помощью Mutanta](http://solnic.eu/2013/01/23/mutation-testing-with-mutant.html)
  - [Спредшит консольных команд](http://rubytune.com/cheat)
 
-## JavaScript 
+## JavaScript
 
  - [Мигрируем с JQuery на Backbone.js](https://github.com/kjbekkelund/writings/blob/master/published/understanding-backbone.md)
  - [Flight.js - new framework from Twitter!](http://engineering.twitter.com/2013/01/introducing-flight-web-application.html)
  - [База JS библиотек](http://www.jsdb.io/)
  - [Hoe.js](http://hoejs.schettino72.net/)
  - [Аудио библиотека](http://goldfirestudios.com/blog/104/howler.js-Modern-Web-Audio-Javascript-Library)
- 
+
 
 READMORE
 
-[audio_tag]
+<%= audio_tag %>
