--- a/source/posts/2013-02-10-podcast-01-01.md.erb
+++ b/source/posts/2013-02-10-podcast-01-01.md.erb
@@ -1,7 +1,7 @@
 ---
-title: 01 выпуск 01 сезона 
+title: 01 выпуск 01 сезона
 date: 2013-02-10
-tags: 
+tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/2/download/podfm_rwpod_my_1_2.mp3"
 audio_mirror: "https://www.dropbox.com/s/0w5hdx9qkhwqxa8/0101.mp3?dl=1"
@@ -29,7 +29,7 @@ main_image: "/images/static/0101.png"
  - [Новый MySQL 5.6](http://www.opennet.ru/opennews/art.shtml?num=36031)
  - [Nyan Cat RSpec Formatter](http://mattsears.com/articles/2011/11/16/nyan-cat-rspec-formatter)
 
-## JavaScript 
+## JavaScript
 
  - [Hint.css — всплывающие подсказки на CSS](http://kushagragour.in/lab/hint/)
  - [JSdelivr - CDN для js разработчиков](http://www.jsdelivr.com/). [Аналог](http://cdnjs.com/)
@@ -37,8 +37,8 @@ main_image: "/images/static/0101.png"
  - [Скринкасты по Angular.js](http://egghead.io/)
  - [WebP в Chrome Web Store](https://developers.google.com/speed/webp/)
  - [Видео с frontend конференций за 2012 год](http://tohtml.it/post/36728117424/front-end-videos-2012)
- 
+
 
 READMORE
 
-[audio_tag]
+<%= audio_tag %>
