--- a/source/posts/2013-02-17-podcast-01-02.md.erb
+++ b/source/posts/2013-02-17-podcast-01-02.md.erb
@@ -1,7 +1,7 @@
 ---
-title: 02 выпуск 01 сезона 
+title: 02 выпуск 01 сезона
 date: 2013-02-17
-tags: 
+tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/3/download/podfm_rwpod_my_2.mp3"
 audio_mirror: "https://dl.dropbox.com/s/qp0zn0f93xlqllo/0102.mp3?dl=1"
@@ -29,7 +29,7 @@ main_image: "/images/static/0102.png"
  - [Сравнение производительности Ruby: 1.9.3-p385, 2.0.0-preview1 и 2.0.0-rc2](http://igor-alexandrov.github.com/blog/2013/02/15/yet-another-ruby-shootout-round-2/)
  - [Начинаем работать с Chef Server](http://leopard.in.ua/2013/02/17/chef-server-getting-started-part-1/)
 
-## JavaScript 
+## JavaScript
 
  - [Переход Opera на WebKit](http://www.opera.com/press/releases/2013/02/13/)
  - [Почему discourse написан на Ember.js](http://eviltrout.com/2013/02/10/why-discourse-uses-emberjs.html)
@@ -46,4 +46,4 @@ main_image: "/images/static/0102.png"
 
 READMORE
 
-[audio_tag]
+<%= audio_tag %>
