--- a/source/posts/2013-02-24-podcast-01-03.md.erb
+++ b/source/posts/2013-02-24-podcast-01-03.md.erb
@@ -1,7 +1,7 @@
 ---
 title: 03 выпуск 01 сезона. Ruby 20 лет и релиз версии 2.0.0, MoSQL, k-d деревья, и прочее
 date: 2013-02-24
-tags: 
+tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/4/download/podfm_rwpod_my_3_4.mp3"
 audio_mirror: "https://dl.dropbox.com/s/fqs0hchp1w3spq4/0103.mp3?dl=1"
@@ -28,7 +28,7 @@ main_image: "/images/static/0103.png"
  - [Sorting gem](https://github.com/apeiros/sorting)
  - [ActiveRecord не безопасные методы](http://rails-sqli.org/)
 
-## JavaScript 
+## JavaScript
 
  - [Nginx будет с WebSocket](http://www.linux.org.ru/news/opensource/8870692)
  - [Typecast.js](http://www.typecastjs.org/)
@@ -40,4 +40,4 @@ main_image: "/images/static/0103.png"
 
 READMORE
 
-[audio_tag]
+<%= audio_tag %>
