--- a/source/posts/2013-03-01-podcast-01-04.md.erb
+++ b/source/posts/2013-03-01-podcast-01-04.md.erb
@@ -1,7 +1,7 @@
 ---
 title: 04 выпуск 01 сезона. Rails 4 beta1, Hotwater, Artoo для роботов, а WebKit для разработчиков
 date: 2013-03-01
-tags: 
+tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/5/download/podfm_rwpod_my_4.mp3"
 audio_mirror: "https://dl.dropbox.com/s/g4bi853ta1qz3wl/0104.mp3?dl=1"
@@ -26,7 +26,7 @@ main_image: "/images/static/0104.png"
  - [Adding Real-Time to a RESTful Rails App](http://liamkaufman.com/blog/2013/02/27/adding-real-time-to-a-restful-rails-app/)
  - [5 хинтов при работе с PostgreSQL от Instagram](http://instagram-engineering.tumblr.com/post/40781627982/handling-growth-with-postgres-5-tips-from-instagram)
 
-## JavaScript 
+## JavaScript
 
  - [WebKit для разработчиков](http://paulirish.com/2013/webkit-for-developers/)
  - Релиз [Coffeescript 1.5 c Literate](http://coffeescript.org/#literate)
@@ -37,4 +37,4 @@ main_image: "/images/static/0104.png"
 
 READMORE
 
-[audio_tag]
+<%= audio_tag %>
