--- a/source/posts/2013-03-09-podcast-01-05.md.erb
+++ b/source/posts/2013-03-09-podcast-01-05.md.erb
@@ -1,7 +1,7 @@
 ---
 title: 05 выпуск 01 сезона. Эфективность define_method, Phusion Passenger 4.0rc4, Node.js 0.8.22 и немного про Webp
 date: 2013-03-09
-tags: 
+tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/6/download/podfm_rwpod_my_5.mp3"
 audio_mirror: "https://dl.dropbox.com/s/xonv9el4wi1djgk/0105.mp3?dl=1"
@@ -36,4 +36,4 @@ main_image: "/images/static/0105.png"
 
 READMORE
 
-[audio_tag]
+<%= audio_tag %>
