--- a/source/posts/2013-08-25-podcast-01-24.md.erb
+++ b/source/posts/2013-08-25-podcast-01-24.md.erb
@@ -1,5 +1,5 @@
 ---
-title: 24 выпуск 01 сезона. Observer pattern, Расширяем Ruby классы, Animate.css, Nprogress и прочее
+title: 24 выпуск 01 сезона. Observer pattern, расширяем Ruby классы, Animate.css, Nprogress и прочее
 date: 2013-08-25
 tags:
  - podcasts
