--- a/source/posts/2013-09-10-podcast-01-26.md.erb
+++ b/source/posts/2013-09-10-podcast-01-26.md.erb
@@ -3,11 +3,11 @@ title: 26 выпуск 01 сезона. Пишем правильно RSpec те
 date: 2013-09-10
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/26/file/podfm_rwpod_my_25.mp3"
-audio_mirror: "https://www.dropbox.com/s/26nqxbolldhumh8/0125.mp3?dl=1"
+audio_url: "http://rwpod.podfm.ru/my/27/file/podfm_rwpod_my_26.mp3"
+audio_mirror: "https://www.dropbox.com/s/m7jj1y4lplphxzc/0126.mp3?dl=1"
 audio_format: "audio/mpeg"
-audio_length: 25930030
-duration: "00:26:57"
+audio_length: 23321054
+duration: "00:24:14"
 small_icon: mic
 main_image: "/images/static/0126.png"
 ---
@@ -22,6 +22,7 @@ main_image: "/images/static/0126.png"
  - [Kochiku - еще один CI](http://corner.squareup.com/2013/09/kochiku.html)
  - [Пишем Rack middleware](http://www.shopify.com/technology/8947689-building-a-rack-middleware)
  - [Unix Background Queue](http://sirupsen.com/unix-background-queue/)
+ - Релиз [PostgreSQL 9.3](http://www.postgresql.org/about/news/1481/)
 
 ## JavaScript
 
@@ -29,6 +30,7 @@ main_image: "/images/static/0126.png"
  - [Imageless Lumia 800](http://tjrus.com/lumia/)
  - [Игнорирование библиотек во время отладки в Google Chrome](http://www.divshot.com/blog/tips-and-tricks/ignoring-library-code-while-debugging-in-chrome/)
  - [Fortune - a web framework for prototyping rich hypermedia APIs](http://fortunejs.com/)
+ - [Falling - игра в JS консоле](http://rikukissa.github.io/falling/)
 
 READMORE
 
