--- a/source/posts/2013-09-10-podcast-01-26.md.erb
+++ b/source/posts/2013-09-10-podcast-01-26.md.erb
@@ -30,7 +30,7 @@ main_image: "/images/static/0126.png"
  - [Imageless Lumia 800](http://tjrus.com/lumia/)
  - [Игнорирование библиотек во время отладки в Google Chrome](http://www.divshot.com/blog/tips-and-tricks/ignoring-library-code-while-debugging-in-chrome/)
  - [Fortune - a web framework for prototyping rich hypermedia APIs](http://fortunejs.com/)
- - [Falling - игра в JS консоле](http://rikukissa.github.io/falling/)
+ - [Falling - игра в JS консоли](http://rikukissa.github.io/falling/)
 
 READMORE
 
