--- a/source/posts/2013-09-24-podcast-01-27.md.erb
+++ b/source/posts/2013-09-24-podcast-01-27.md.erb
@@ -28,6 +28,7 @@ main_image: "/images/static/0127.png"
  - [Countdown.js](http://gumroad.github.io/countdown.js/)
  - [Modularity in javascript](http://shvets.github.io/blog/2013/09/21/modularity-in-javascript.html)
  - [Flipclock.js](http://flipclockjs.com/)
+ - [A dumb easy model for promises](http://www.vittoriozaccaria.net/blog/2013/09/23/a-dumb-easy-model-for-promises.html)
  - [Measurer.js](http://mark-rolich.github.io/Measurer.js/) и [RulersGuides.js](http://mark-rolich.github.io/RulersGuides.js/)
 
 READMORE
