--- a/source/posts/2013-10-14-podcast-01-30.md.erb
+++ b/source/posts/2013-10-14-podcast-01-30.md.erb
@@ -30,7 +30,8 @@ main_image: "/images/static/0130.png"
  - [Spy.js](http://spy-js.com/)
  - [Flexbox](http://philipwalton.github.io/solved-by-flexbox/)
  - [PhysicsJS](http://wellcaffeinated.net/PhysicsJS/)
- - [JVFloat.js](https://avatar.java.net/)
+ - [JVFloat.js](https://github.com/maman/JVFloat.js)
+ - [Avatar](https://avatar.java.net/)
 
 READMORE
 
