--- a/source/posts/2013-10-20-podcast-01-31.md.erb
+++ b/source/posts/2013-10-20-podcast-01-31.md.erb
@@ -1,5 +1,5 @@
 ---
-title: 31 выпуск 01 сезона. Релиз Rails 3.2.15, Rubinius-X, Backbone 1.1.0, Mago, React, LeapCursor.js и прочее
+title: 31 выпуск 01 сезона. Релиз Rails 3.2.15, Rubinius-X, Mago, React, LeapCursor.js и прочее
 date: 2013-10-20
 tags:
  - podcasts
