--- a/source/posts/2013-11-18-podcast-01-35.md.erb
+++ b/source/posts/2013-11-18-podcast-01-35.md.erb
@@ -1,5 +1,5 @@
 ---
-title: 35 выпуск 01 сезона. OAuth as Single Sign On, релиз RSpec и Dart, Lineman, HistogramJS и прочее
+title: 35 выпуск 01 сезона. OAuth as Single Sign On, релизы RSpec и Dart, Lineman, HistogramJS и прочее
 date: 2013-11-18
 tags:
  - podcasts
