--- a/source/posts/2013-03-01-podcast-01-04.md.erb
+++ b/source/posts/2013-03-01-podcast-01-04.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 17213728
 duration: "00:17:52"
 small_icon: mic
-main_image: "/images/static/0104.png"
+main_image: "/images/static/01/0104.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
