--- a/source/posts/2013-03-09-podcast-01-05.md.erb
+++ b/source/posts/2013-03-09-podcast-01-05.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 16938327
 duration: "00:17:35"
 small_icon: mic
-main_image: "/images/static/0105.png"
+main_image: "/images/static/01/0105.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
