--- a/source/posts/2013-03-24-podcast-01-07.md.erb
+++ b/source/posts/2013-03-24-podcast-01-07.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 26462314
 duration: "00:27:30"
 small_icon: mic
-main_image: "/images/static/0107.png"
+main_image: "/images/static/01/0107.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
