--- a/source/posts/2013-04-07-podcast-01-09.md.erb
+++ b/source/posts/2013-04-07-podcast-01-09.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 17090453
 duration: "00:17:45"
 small_icon: mic
-main_image: "/images/static/0109.png"
+main_image: "/images/static/01/0109.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
