--- a/source/posts/2013-04-14-podcast-01-10.md.erb
+++ b/source/posts/2013-04-14-podcast-01-10.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 21904748
 duration: "00:22:45"
 small_icon: mic
-main_image: "/images/static/0110.png"
+main_image: "/images/static/01/0110.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
