--- a/source/posts/2013-04-28-podcast-01-12.md.erb
+++ b/source/posts/2013-04-28-podcast-01-12.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 23600331
 duration: "00:24:31"
 small_icon: mic
-main_image: "/images/static/0112.png"
+main_image: "/images/static/01/0112.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
