--- a/source/posts/2013-06-02-podcast-01-14.md.erb
+++ b/source/posts/2013-06-02-podcast-01-14.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 36152258
 duration: "00:37:36"
 small_icon: mic
-main_image: "/images/static/0114.png"
+main_image: "/images/static/01/0114.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
