--- a/source/posts/2013-06-16-podcast-01-16.md.erb
+++ b/source/posts/2013-06-16-podcast-01-16.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 33473727
 duration: "00:34:49"
 small_icon: mic
-main_image: "/images/static/0116.png"
+main_image: "/images/static/01/0116.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
