--- a/source/posts/2013-06-23-podcast-01-17.md.erb
+++ b/source/posts/2013-06-23-podcast-01-17.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 20930739
 duration: "00:21:45"
 small_icon: mic
-main_image: "/images/static/0117.png"
+main_image: "/images/static/01/0117.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
