--- a/source/posts/2013-07-15-podcast-01-19.md.erb
+++ b/source/posts/2013-07-15-podcast-01-19.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 35337431
 duration: "00:36:45"
 small_icon: mic
-main_image: "/images/static/0119.png"
+main_image: "/images/static/01/0119.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
