--- a/source/posts/2013-07-29-podcast-01-21.md.erb
+++ b/source/posts/2013-07-29-podcast-01-21.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 25968821
 duration: "00:26:59"
 small_icon: mic
-main_image: "/images/static/0121.png"
+main_image: "/images/static/01/0121.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
