--- a/source/posts/2013-08-04-podcast-01-22.md.erb
+++ b/source/posts/2013-08-04-podcast-01-22.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 19582376
 duration: "00:20:20"
 small_icon: mic
-main_image: "/images/static/0122.png"
+main_image: "/images/static/01/0122.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
