--- a/source/posts/2013-08-25-podcast-01-24.md.erb
+++ b/source/posts/2013-08-25-podcast-01-24.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 40784318
 duration: "00:42:25"
 small_icon: mic
-main_image: "/images/static/0124.png"
+main_image: "/images/static/01/0124.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
