--- a/source/posts/2013-09-01-podcast-01-25.md.erb
+++ b/source/posts/2013-09-01-podcast-01-25.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 25930030
 duration: "00:26:57"
 small_icon: mic
-main_image: "/images/static/0125.png"
+main_image: "/images/static/01/0125.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
