--- a/source/posts/2013-09-24-podcast-01-27.md.erb
+++ b/source/posts/2013-09-24-podcast-01-27.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 25927077
 duration: "00:26:57"
 small_icon: mic
-main_image: "/images/static/0127.png"
+main_image: "/images/static/01/0127.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
