--- a/source/posts/2013-09-29-podcast-01-28.md.erb
+++ b/source/posts/2013-09-29-podcast-01-28.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 39264447
 duration: "00:40:50"
 small_icon: mic
-main_image: "/images/static/0128.png"
+main_image: "/images/static/01/0128.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
