--- a/source/posts/2013-11-03-podcast-01-33.md.erb
+++ b/source/posts/2013-11-03-podcast-01-33.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 39227056
 duration: "00:40:48"
 small_icon: mic
-main_image: "/images/static/0133.png"
+main_image: "/images/static/01/0133.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
