--- a/source/posts/2013-02-10-podcast-01-01.md.erb
+++ b/source/posts/2013-02-10-podcast-01-01.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 17585338
 duration: "00:18:15"
 small_icon: mic
-main_image: "/images/static/0101.png"
+main_image: "/images/static/01/0101.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
