--- a/source/posts/2013-02-17-podcast-01-02.md.erb
+++ b/source/posts/2013-02-17-podcast-01-02.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 29508036
 duration: "00:30:41"
 small_icon: mic
-main_image: "/images/static/0102.png"
+main_image: "/images/static/01/0102.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
