--- a/source/posts/2013-02-24-podcast-01-03.md.erb
+++ b/source/posts/2013-02-24-podcast-01-03.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 21835244
 duration: "00:22:41"
 small_icon: mic
-main_image: "/images/static/0103.png"
+main_image: "/images/static/01/0103.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
