--- a/source/posts/2013-03-17-podcast-01-06.md.erb
+++ b/source/posts/2013-03-17-podcast-01-06.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 19063929
 duration: "00:19:48"
 small_icon: mic
-main_image: "/images/static/0106.png"
+main_image: "/images/static/01/0106.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
