--- a/source/posts/2013-04-01-podcast-01-08.md.erb
+++ b/source/posts/2013-04-01-podcast-01-08.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 23254019
 duration: "00:24:10"
 small_icon: mic
-main_image: "/images/static/0108.png"
+main_image: "/images/static/01/0108.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
