--- a/source/posts/2013-04-21-podcast-01-11.md.erb
+++ b/source/posts/2013-04-21-podcast-01-11.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 26980464
 duration: "00:28:03"
 small_icon: mic
-main_image: "/images/static/0111.png"
+main_image: "/images/static/01/0111.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
