--- a/source/posts/2013-05-05-podcast-01-13.md.erb
+++ b/source/posts/2013-05-05-podcast-01-13.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 10748741
 duration: "00:11:08"
 small_icon: mic
-main_image: "/images/static/0113.png"
+main_image: "/images/static/01/0113.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
