--- a/source/posts/2013-06-09-podcast-01-15.md.erb
+++ b/source/posts/2013-06-09-podcast-01-15.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 23394751
 duration: "00:24:19"
 small_icon: mic
-main_image: "/images/static/0115.png"
+main_image: "/images/static/01/0115.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
