--- a/source/posts/2013-07-07-podcast-01-18.md.erb
+++ b/source/posts/2013-07-07-podcast-01-18.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 27659944
 duration: "00:28:45"
 small_icon: mic
-main_image: "/images/static/0118.png"
+main_image: "/images/static/01/0118.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
