--- a/source/posts/2013-07-22-podcast-01-20.md.erb
+++ b/source/posts/2013-07-22-podcast-01-20.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 31594963
 duration: "00:32:51"
 small_icon: mic
-main_image: "/images/static/0120.png"
+main_image: "/images/static/01/0120.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
