--- a/source/posts/2013-08-19-podcast-01-23.md.erb
+++ b/source/posts/2013-08-19-podcast-01-23.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 25190912
 duration: "00:26:11"
 small_icon: mic
-main_image: "/images/static/0123.png"
+main_image: "/images/static/01/0123.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
