--- a/source/posts/2013-10-06-podcast-01-29.md.erb
+++ b/source/posts/2013-10-06-podcast-01-29.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 35040739
 duration: "00:36:26"
 small_icon: mic
-main_image: "/images/static/0129.png"
+main_image: "/images/static/01/0129.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
