--- a/source/posts/2013-10-14-podcast-01-30.md.erb
+++ b/source/posts/2013-10-14-podcast-01-30.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 30610797
 duration: "00:31:50"
 small_icon: mic
-main_image: "/images/static/0130.png"
+main_image: "/images/static/01/0130.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
