--- a/source/posts/2013-10-20-podcast-01-31.md.erb
+++ b/source/posts/2013-10-20-podcast-01-31.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 29876424
 duration: "00:31:04"
 small_icon: mic
-main_image: "/images/static/0131.png"
+main_image: "/images/static/01/0131.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
