--- a/source/posts/2013-10-27-podcast-01-32.md.erb
+++ b/source/posts/2013-10-27-podcast-01-32.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 40100904
 duration: "00:41:43"
 small_icon: mic
-main_image: "/images/static/0132.png"
+main_image: "/images/static/01/0132.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
