--- a/source/posts/2013-11-10-podcast-01-34.md.erb
+++ b/source/posts/2013-11-10-podcast-01-34.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 33891679
 duration: "00:35:15"
 small_icon: mic
-main_image: "/images/static/0134.png"
+main_image: "/images/static/01/0134.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
