--- a/source/posts/2013-11-18-podcast-01-35.md.erb
+++ b/source/posts/2013-11-18-podcast-01-35.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 30573015
 duration: "00:31:47"
 small_icon: mic
-main_image: "/images/static/0135.png"
+main_image: "/images/static/01/0135.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
