--- a/source/posts/2013-11-25-podcast-01-36.md.erb
+++ b/source/posts/2013-11-25-podcast-01-36.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 28832569
 duration: "00:29:58"
 small_icon: mic
-main_image: "/images/static/0136.png"
+main_image: "/images/static/01/0136.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
