--- a/source/posts/2013-12-01-podcast-01-37.md.erb
+++ b/source/posts/2013-12-01-podcast-01-37.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 21686034
 duration: "00:22:32"
 small_icon: mic
-main_image: "/images/static/0137.png"
+main_image: "/images/static/01/0137.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
