--- a/source/posts/2013-12-09-podcast-01-38.md.erb
+++ b/source/posts/2013-12-09-podcast-01-38.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 30742771
 duration: "00:31:58"
 small_icon: mic
-main_image: "/images/static/0138.png"
+main_image: "/images/static/01/0138.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
