--- a/source/posts/2013-12-16-podcast-01-39.md.erb
+++ b/source/posts/2013-12-16-podcast-01-39.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 28904195
 duration: "00:30:03"
 small_icon: mic
-main_image: "/images/static/0139.png"
+main_image: "/images/static/01/0139.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
