--- a/source/posts/2013-12-23-podcast-01-40.md.erb
+++ b/source/posts/2013-12-23-podcast-01-40.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 37820820
 duration: "00:39:20"
 small_icon: mic
-main_image: "/images/static/0140.png"
+main_image: "/images/static/01/0140.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
