--- a/source/posts/2014-01-13-podcast-02-01.md.erb
+++ b/source/posts/2014-01-13-podcast-02-01.md.erb
@@ -9,7 +9,7 @@ audio_format: "audio/mpeg"
 audio_length: 33243700
 duration: "00:34:34"
 small_icon: mic
-main_image: "/images/static/0201.png"
+main_image: "/images/static/02/0201.png"
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
