--- a/source/posts/2014-01-20-podcast-02-02.md.erb
+++ b/source/posts/2014-01-20-podcast-02-02.md.erb
@@ -31,7 +31,7 @@ main_image: "/images/static/02/0202.png"
  - [Resumable.js - a JavaScript library providing multiple simultaneous, stable and resumable uploads via the HTML5 File API](http://resumablejs.com/)
  - [Writing A Better JavaScript Library For The DOM](http://www.responsivejavascript.com/)
  - [JavaScript - the Right Way](http://jstherightway.org/)
- - [Hammer.js - a javascript library for multi-touch gestures](hhttp://eightmedia.github.io/hammer.js/)
+ - [Hammer.js - a javascript library for multi-touch gestures](http://eightmedia.github.io/hammer.js/)
 
 ## Оффтоп
 
