--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -149,7 +149,7 @@
           <p>
             &copy; <%= default_footer_copyright_helper %>
             &nbsp;
-            <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-nd/3.0/80x15.png" /></a>
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" /></a>
           </p>
         </div>
         <div class="large-6 columns">
