--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -18,7 +18,7 @@ title: "О нас"
   <div class="large-8 columns">
     <h3>Александр Чаплинский</h3>
     <ul class="inline-list people-social-icons">
-      <li><a class="fc-webicon twitter" href="https://twitter.com/chalexr">Twitter</a></li>
+      <li><a class="fc-webicon twitter" href="https://twitter.com/a1chapone">Twitter</a></li>
       <li><a class="fc-webicon github" href="https://github.com/alchapone">Github</a></li>
       <li><a class="fc-webicon linkedin" href="http://www.linkedin.com/pub/alexander-chaplinsky/34/2a3/3a0">Linkedin</a></li>
       <li><a class="fc-webicon facebook" href="http://www.facebook.com/profile.php?id=1433185383">Facebook</a></li>
