--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -34,7 +34,7 @@
     <link rel="icon" type="image/ico" href="/images/favicons/favicon.ico" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
     <!-- rss -->
     <link href="<%= default_feeds_url_helper %>/rwpod" rel="alternate" title="<%=h default_title_helper %>" type="application/rss+xml">
