--- a/source/posts/2014/06-22-podcast-02-21.md.erb
+++ b/source/posts/2014/06-22-podcast-02-21.md.erb
@@ -16,7 +16,7 @@ main_image: "/images/static/02/0221.png"
 
 ## Ruby
 
- - [Teatro.io - automatic stages for web applications](http://teatro.io/) Для наших слушателей введите промокод "**rwpod**" и получите план на 5 стейджей за $20 вместо $50
+ - [Teatro.io - automatic stages for web applications](http://teatro.io/) Для слушателей нашего подкаста введите промокод "**rwpod**" и получите план на 5 стейджей за $20 вместо $50
  - [Stormforger - comprehensive load testing, using Ruby as DSL](https://stormforger.com/). А также вспоминали про [loader.io](https://loader.io/)
  - [Introducing pg_query: Parse PostgreSQL queries in Ruby](https://pganalyze.com/blog/parse-postgresql-queries-in-ruby.html)
  - [Preserving Model History with ActiveRecord and PostgreSQL](http://engineering.moneybird.com/posts/2014/06/16/preserving-model-history-with-activerecord-and-postgresql/)
