--- a/source/posts/2014/07-19-cafe-003.md.erb
+++ b/source/posts/2014/07-19-cafe-003.md.erb
@@ -4,8 +4,8 @@ date: 2014-07-19
 tags:
  - podcasts
  - cafe
-audio_url: ""
-audio_mirror: ""
+audio_url: "http://rwpod.podfm.ru/my/67/file/podfm_rwpod_my_20140719.mp3"
+audio_mirror: "https://www.dropbox.com/s/rf9hrtwe5w3o4ip/003.mp3?dl=1"
 audio_format: "audio/mpeg"
 audio_length: 54138534
 duration: "00:56:20"
