--- a/source/posts/2014/07-13-podcast-02-24.md.erb
+++ b/source/posts/2014/07-13-podcast-02-24.md.erb
@@ -4,7 +4,7 @@ date: 2014-07-13
 tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/66/file/podfm_rwpod_my_24_66.mp3"
-audio_mirror: "https://www.dropbox.com/s/ia07h3iyy1mpltz/0224.mp3?dl=1"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/02.24/0224.mp3"
 audio_format: "audio/mpeg"
 audio_length: 55633704
 duration: "00:57:53"
