--- a/source/posts/2014/07-06-podcast-02-23.md.erb
+++ b/source/posts/2014/07-06-podcast-02-23.md.erb
@@ -4,7 +4,7 @@ date: 2014-07-06
 tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/65/file/podfm_rwpod_my_23_65.mp3"
-audio_mirror: "https://www.dropbox.com/s/n7hhm2fh45l9gad/0223.mp3?dl=1"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/02.23/0223.mp3"
 audio_format: "audio/mpeg"
 audio_length: 38673566
 duration: "00:40:13"
