--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -112,7 +112,10 @@
     <aside class="large-3 columns">
 
       <div class="panel">
-        <h5>Есть чем поделиться с нами? <%= hex_mail_to default_email_helper, "Напишите нам." %></h5>
+        <h5>
+          Есть чем поделиться с нами? <%= hex_mail_to default_email_helper, "Напишите нам письмо" %> или в чат:
+          <a href="https://gitter.im/rwpod/public"><img src="https://badges.gitter.im/rwpod/public.png" alt="Gitter chat" /></a>
+        </h5>
       </div>
 
       <h5>Архив</h5>
