--- a/source/posts/2014/08-17-podcast-02-27.md.erb
+++ b/source/posts/2014/08-17-podcast-02-27.md.erb
@@ -16,8 +16,11 @@ main_image: "/images/static/02/0227.png"
 
 ## Ruby
 
- - [Happyhours - time registration that doesn't suck](https://happyhours.io/)
+ - [Bayesian Filter Performance in Ruby](http://rurounijones.github.io/blog/2014/08/11/bayesian-filter-performance-in-ruby/)
+ - [Asynchronous Programming with Goroutines in Ruby](http://sndrs.ca/2014/08/12/asynchronous-programming-with-goroutines-in-ruby/)
+ - [Happyhours - time registration that doesn't suck](https://happyhours.io/) ([исходники](https://github.com/DefactoSoftware/Hours/))
  - [Rails-Param](https://github.com/nicolasblanco/rails_param), [Groupdate](https://github.com/ankane/groupdate) и [Sandthorn Event Sourcing](https://github.com/Sandthorn/sandthorn)
+ - [Yukihiro "Matz" Matsumoto - The future of Ruby (video)](https://www.youtube.com/watch?v=CPoZJoHtuZ8)
 
 ## JavaScript
 
