--- a/source/posts/2014/08-17-podcast-02-27.md.erb
+++ b/source/posts/2014/08-17-podcast-02-27.md.erb
@@ -24,7 +24,11 @@ main_image: "/images/static/02/0227.png"
 
 ## JavaScript
 
+ - [Famo.us raises $25M to double down on its innovative JavaScript framework](http://venturebeat.com/2014/08/13/famo-us-raises-25m-to-double-down-on-javascript-app-development-framework/)
+ - [Framer.js - Innovative Prototyping](http://framerjs.com/), [Blendme - collection of vector assets](http://blendme.in/)
  - [Tracking.js - a modern approach for Computer Vision on the web](http://trackingjs.com/)
+ - [Way.js -  javascript library that allows you to bind DOM elements to an in-memory datastore](http://gwendall.github.io/way/)
+ - [PojoViz - Plain Old JavaScript Object Visualization](http://maurizzzio.github.io/PojoViz/public/vulcanize.html#readme)
 
 READMORE
 
