--- a/source/posts/2014/08-24-podcast-02-28.md.erb
+++ b/source/posts/2014/08-24-podcast-02-28.md.erb
@@ -17,13 +17,23 @@ main_image: "/images/static/02/0228.png"
 ## Ruby
 
  - [Rails 4.2.0 beta1: Active Job, Deliver Later, Adequate Record, Web Console](http://weblog.rubyonrails.org/2014/8/20/Rails-4-2-beta1/)
+ - [Rails on a diet](http://naturaily.com/blog/post/rails-on-a-diet)
+ - [Yabbie is a gem to wrap SlimerJS](http://net-engine.github.io/yabbie/) и [Http::Exceptions](https://github.com/rainforestapp/http-exceptions)
+ - [Truncating UTF8 Input For APNS in Ruby](http://blog.arkency.com/2014/08/apns-and-utf8/)
 
 ## JavaScript
 
+ - [Chest.js - easy Metafile Manager](http://chestjs.com/)
+ - [BeaverBird](http://beaverbird.com/)
  - [92Fiveapp - self hosted Project Management Web Application](http://92fiveapp.com/)
- - [Using and over abusing CSS](http://red-team-design.com/using-over-abusing-css/) и [CSS at Groupon](http://mikeaparicio.com/2014/08/10/css-at-groupon/)
- - [The Problem With Using HTML Imports For Dependency Management](http://tjvantoll.com/2014/08/12/the-problem-with-using-html-imports-for-dependency-management/) и [Visual Designers Checklist for the Web](http://webdesignerschecklist.com/)
- - [Первая CSS переменная: currentColor](http://demosthenes.info/blog/908/The-First-CSS-Variable-currentColor), [Marka — плагин для анимированной трансформации иконок](http://fian.my.id/marka/) и [Трансформация CSS в сокращенную форму](http://shrthnd.volume7.io/)
+ - [Using and over abusing CSS](http://red-team-design.com/using-over-abusing-css/)
+ - [CSS at Groupon](http://mikeaparicio.com/2014/08/10/css-at-groupon/)
+ - [The Problem With Using HTML Imports For Dependency Management](http://tjvantoll.com/2014/08/12/the-problem-with-using-html-imports-for-dependency-management/)
+ - [Visual Designers Checklist for the Web](http://webdesignerschecklist.com/)
+ - [Первая CSS переменная: currentColor](http://demosthenes.info/blog/908/The-First-CSS-Variable-currentColor)
+ - [Marka — плагин для анимированной трансформации иконок](http://fian.my.id/marka/)
+ - [Трансформация CSS в сокращенную форму](http://shrthnd.volume7.io/)
+ - [Satellizer - a simple to use, end-to-end, token-based authentication module for AngularJS](https://github.com/sahat/satellizer)
  - [Accelerate your Mobile Application with the GPU (video)](https://www.youtube.com/watch?v=ZMfS-2ctYjw)
 
 READMORE
