--- a/source/posts/2014/08-24-podcast-02-28.md.erb
+++ b/source/posts/2014/08-24-podcast-02-28.md.erb
@@ -16,13 +16,14 @@ main_image: "/images/static/02/0228.png"
 
 ## Ruby
 
- - [Rails 4.2.0 beta1: Active Job, Deliver Later, Adequate Record, Web Console](http://weblog.rubyonrails.org/2014/8/20/Rails-4-2-beta1/)
+ - Релизы [Rails 4.0.9 and 4.1.5](http://weblog.rubyonrails.org/2014/8/18/Rails_4_0_9_and_4_1_5_have_been_released/) и [Rails 4.2.0 beta1: Active Job, Deliver Later, Adequate Record, Web Console](http://weblog.rubyonrails.org/2014/8/20/Rails-4-2-beta1/)
  - [Rails on a diet](http://naturaily.com/blog/post/rails-on-a-diet)
  - [Yabbie is a gem to wrap SlimerJS](http://net-engine.github.io/yabbie/) и [Http::Exceptions](https://github.com/rainforestapp/http-exceptions)
  - [Truncating UTF8 Input For APNS in Ruby](http://blog.arkency.com/2014/08/apns-and-utf8/)
 
 ## JavaScript
 
+ - [CSS Guideline](http://cssguidelin.es/)
  - [Chest.js - easy Metafile Manager](http://chestjs.com/)
  - [BeaverBird](http://beaverbird.com/)
  - [92Fiveapp - self hosted Project Management Web Application](http://92fiveapp.com/)
