--- a/source/posts/2014/08-24-podcast-02-28.md.erb
+++ b/source/posts/2014/08-24-podcast-02-28.md.erb
@@ -16,9 +16,10 @@ main_image: "/images/static/02/0228.png"
 
 ## Ruby
 
- - Релизы [Rails 4.0.9 and 4.1.5](http://weblog.rubyonrails.org/2014/8/18/Rails_4_0_9_and_4_1_5_have_been_released/) и [Rails 4.2.0 beta1: Active Job, Deliver Later, Adequate Record, Web Console](http://weblog.rubyonrails.org/2014/8/20/Rails-4-2-beta1/)
+ - Релизы [Rails 4.0.9 and 4.1.5](http://weblog.rubyonrails.org/2014/8/18/Rails_4_0_9_and_4_1_5_have_been_released/) и [Rails 4.2.0 beta1: Active Job, Deliver Later, Adequate Record, Web Console](http://weblog.rubyonrails.org/2014/8/20/Rails-4-2-beta1/). И еще [немного про Rack](https://groups.google.com/forum/m/#!msg/rack-devel/P8oOycVBaH0/1bm4eERJWPQJ)
  - [Rails on a diet](http://naturaily.com/blog/post/rails-on-a-diet)
- - [Yabbie is a gem to wrap SlimerJS](http://net-engine.github.io/yabbie/) и [Http::Exceptions](https://github.com/rainforestapp/http-exceptions)
+ - [Renewed Life for STI with PostgreSQL JSON type](https://netguru.co/blog/posts/renewed-life-for-sti-with-postgresql-json-type)
+ - [Yabbie is a gem to wrap SlimerJS](http://net-engine.github.io/yabbie/), [Transit-rails](https://github.com/jgdavey/transit-rails) и [Http::Exceptions](https://github.com/rainforestapp/http-exceptions)
  - [Truncating UTF8 Input For APNS in Ruby](http://blog.arkency.com/2014/08/apns-and-utf8/)
 
 ## JavaScript
