--- a/source/posts/2014/08-24-podcast-02-28.md.erb
+++ b/source/posts/2014/08-24-podcast-02-28.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "28 выпуск 02 сезона. и прочее"
+title: "28 выпуск 02 сезона. Rails 4.0.9, 4.1.5 и 4.2.0 beta1, Rails on a diet, Transit-rails, CSS Guideline, CSS at Groupon, Marka, BeaverBird и прочее"
 date: 2014-08-24
 tags:
  - podcasts
@@ -19,24 +19,16 @@ main_image: "/images/static/02/0228.png"
  - Релизы [Rails 4.0.9 and 4.1.5](http://weblog.rubyonrails.org/2014/8/18/Rails_4_0_9_and_4_1_5_have_been_released/) и [Rails 4.2.0 beta1: Active Job, Deliver Later, Adequate Record, Web Console](http://weblog.rubyonrails.org/2014/8/20/Rails-4-2-beta1/). И еще [немного про Rack](https://groups.google.com/forum/m/#!msg/rack-devel/P8oOycVBaH0/1bm4eERJWPQJ)
  - [Rails on a diet](http://naturaily.com/blog/post/rails-on-a-diet)
  - [Renewed Life for STI with PostgreSQL JSON type](https://netguru.co/blog/posts/renewed-life-for-sti-with-postgresql-json-type)
- - [Yabbie is a gem to wrap SlimerJS](http://net-engine.github.io/yabbie/), [Transit-rails](https://github.com/jgdavey/transit-rails) и [Http::Exceptions](https://github.com/rainforestapp/http-exceptions)
  - [Truncating UTF8 Input For APNS in Ruby](http://blog.arkency.com/2014/08/apns-and-utf8/)
+ - [Yabbie is a gem to wrap SlimerJS](http://net-engine.github.io/yabbie/), [Transit-rails](https://github.com/jgdavey/transit-rails) и [Http::Exceptions](https://github.com/rainforestapp/http-exceptions)
 
 ## JavaScript
 
- - [CSS Guideline](http://cssguidelin.es/)
- - [Chest.js - easy Metafile Manager](http://chestjs.com/)
- - [BeaverBird](http://beaverbird.com/)
- - [92Fiveapp - self hosted Project Management Web Application](http://92fiveapp.com/)
- - [Using and over abusing CSS](http://red-team-design.com/using-over-abusing-css/)
- - [CSS at Groupon](http://mikeaparicio.com/2014/08/10/css-at-groupon/)
- - [The Problem With Using HTML Imports For Dependency Management](http://tjvantoll.com/2014/08/12/the-problem-with-using-html-imports-for-dependency-management/)
- - [Visual Designers Checklist for the Web](http://webdesignerschecklist.com/)
- - [Первая CSS переменная: currentColor](http://demosthenes.info/blog/908/The-First-CSS-Variable-currentColor)
- - [Marka — плагин для анимированной трансформации иконок](http://fian.my.id/marka/)
- - [Трансформация CSS в сокращенную форму](http://shrthnd.volume7.io/)
- - [Satellizer - a simple to use, end-to-end, token-based authentication module for AngularJS](https://github.com/sahat/satellizer)
- - [Accelerate your Mobile Application with the GPU (video)](https://www.youtube.com/watch?v=ZMfS-2ctYjw)
+ - [CSS Guideline](http://cssguidelin.es/), [Using and over abusing CSS](http://red-team-design.com/using-over-abusing-css/)
+ - [CSS at Groupon](http://mikeaparicio.com/2014/08/10/css-at-groupon/), [Первая CSS переменная: currentColor](http://demosthenes.info/blog/908/The-First-CSS-Variable-currentColor) и [Трансформация CSS в сокращенную форму](http://shrthnd.volume7.io/)
+ - [The Problem With Using HTML Imports For Dependency Management](http://tjvantoll.com/2014/08/12/the-problem-with-using-html-imports-for-dependency-management/) и [Satellizer - a simple to use, end-to-end, token-based authentication module for AngularJS](https://github.com/sahat/satellizer)
+ - [Marka — плагин для анимированной трансформации иконок](http://fian.my.id/marka/), [Chest.js - easy Metafile Manager](http://chestjs.com/) и [BeaverBird](http://beaverbird.com/)
+ - [Visual Designers Checklist for the Web](http://webdesignerschecklist.com/) и [Accelerate your Mobile Application with the GPU (video)](https://www.youtube.com/watch?v=ZMfS-2ctYjw)
 
 READMORE
 
