--- a/source/posts/2014/08-24-podcast-02-28.md.erb
+++ b/source/posts/2014/08-24-podcast-02-28.md.erb
@@ -25,10 +25,10 @@ main_image: "/images/static/02/0228.png"
 ## JavaScript
 
  - [CSS Guideline](http://cssguidelin.es/), [Using and over abusing CSS](http://red-team-design.com/using-over-abusing-css/)
- - [CSS at Groupon](http://mikeaparicio.com/2014/08/10/css-at-groupon/), [Первая CSS переменная: currentColor](http://demosthenes.info/blog/908/The-First-CSS-Variable-currentColor) и [Трансформация CSS в сокращенную форму](http://shrthnd.volume7.io/)
+ - [CSS at Groupon](http://mikeaparicio.com/2014/08/10/css-at-groupon/), [Трансформация CSS в сокращенную форму](http://shrthnd.volume7.io/) и [Terra.js](http://rileyjshaw.com/terra/)
  - [The Problem With Using HTML Imports For Dependency Management](http://tjvantoll.com/2014/08/12/the-problem-with-using-html-imports-for-dependency-management/) и [Satellizer - a simple to use, end-to-end, token-based authentication module for AngularJS](https://github.com/sahat/satellizer)
- - [Terra.js](http://rileyjshaw.com/terra/), [Marka — плагин для анимированной трансформации иконок](http://fian.my.id/marka/), [Chest.js - easy Metafile Manager](http://chestjs.com/) и [BeaverBird](http://beaverbird.com/)
- - [Visual Designers Checklist for the Web](http://webdesignerschecklist.com/) и [Accelerate your Mobile Application with the GPU (video)](https://www.youtube.com/watch?v=ZMfS-2ctYjw)
+ - [Marka — плагин для анимированной трансформации иконок](http://fian.my.id/marka/), [Chest.js - easy Metafile Manager](http://chestjs.com/) и [BeaverBird](http://beaverbird.com/)
+ - [Visual Designers Checklist for the Web](http://webdesignerschecklist.com/), [Advanced performance tooling in Chrome DevTools](https://www.youtube.com/watch?v=0xx_dkv9DEY) и [Accelerate your Mobile Application with the GPU (video)](https://www.youtube.com/watch?v=ZMfS-2ctYjw)
 
 READMORE
 
