--- a/source/posts/2014/08-24-podcast-02-28.md.erb
+++ b/source/posts/2014/08-24-podcast-02-28.md.erb
@@ -3,11 +3,11 @@ title: "28 выпуск 02 сезона. Rails 4.0.9, 4.1.5 и 4.2.0 beta1, Rail
 date: 2014-08-24
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/70/file/podfm_rwpod_my_27_70.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/02.27/0227.mp3"
+audio_url: "http://rwpod.podfm.ru/my/71/file/podfm_rwpod_my_28_71.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/02.28/0228.mp3"
 audio_format: "audio/mpeg"
-audio_length: 36253002
-duration: "00:37:42"
+audio_length: 60353767
+duration: "01:02:48"
 small_icon: mic
 main_image: "/images/static/02/0228.png"
 ---
@@ -25,9 +25,9 @@ main_image: "/images/static/02/0228.png"
 ## JavaScript
 
  - [CSS Guideline](http://cssguidelin.es/), [Using and over abusing CSS](http://red-team-design.com/using-over-abusing-css/)
- - [CSS at Groupon](http://mikeaparicio.com/2014/08/10/css-at-groupon/), [Трансформация CSS в сокращенную форму](http://shrthnd.volume7.io/) и [Terra.js](http://rileyjshaw.com/terra/)
+ - [CSS at Groupon](http://mikeaparicio.com/2014/08/10/css-at-groupon/) и [Terra.js](http://rileyjshaw.com/terra/)
  - [The Problem With Using HTML Imports For Dependency Management](http://tjvantoll.com/2014/08/12/the-problem-with-using-html-imports-for-dependency-management/) и [Satellizer - a simple to use, end-to-end, token-based authentication module for AngularJS](https://github.com/sahat/satellizer)
- - [Marka — плагин для анимированной трансформации иконок](http://fian.my.id/marka/), [Chest.js - easy Metafile Manager](http://chestjs.com/) и [BeaverBird](http://beaverbird.com/)
+ - [Marka — анимированные иконки](http://fian.my.id/marka/), [Chest.js - easy Metafile Manager](http://chestjs.com/) и [BeaverBird](http://beaverbird.com/)
  - [Visual Designers Checklist for the Web](http://webdesignerschecklist.com/), [Advanced performance tooling in Chrome DevTools](https://www.youtube.com/watch?v=0xx_dkv9DEY) и [Accelerate your Mobile Application with the GPU (video)](https://www.youtube.com/watch?v=ZMfS-2ctYjw)
 
 READMORE
