--- a/source/posts/2014/08-31-podcast-02-29.md.erb
+++ b/source/posts/2014/08-31-podcast-02-29.md.erb
@@ -17,14 +17,19 @@ main_image: "/images/static/02/0229.png"
 ## Ruby
 
  - [The Lesser-known Features in Rails 4.2](http://www.justinweiss.com/blog/2014/08/25/the-lesser-known-features-in-rails-4-dot-2/)
+ - [Optimizing Elasticsearch Searches](https://www.found.no/foundation/optimizing-elasticsearch-searches/)
 
 
 ## JavaScript
 
  - [Knockout 3.2.0](http://blog.stevensanderson.com/2014/08/18/knockout-3-2-0-released/)
+ - [CoffeeScript 1.8.0](https://github.com/jashkenas/coffeescript/releases/tag/1.8.0)
  - [Duo.js - a next-generation package manager for the front-end](http://duojs.org/)
  - [Barekit - a front-end project starter](http://a2labs.github.io/barekit/)
  - [Detect if a Function is Native Code with JavaScript](http://davidwalsh.name/detect-native-function)
+ - [Grabs - front-end development environment](http://grabs.in/)
+ - [Pixi-editor - Pixi.js based simple image editor](http://antirek.github.io/pixi-editor/)
+ - [JSON Resume](http://jsonresume.org/)
 
 READMORE
 
