--- a/source/posts/2014/08-31-podcast-02-29.md.erb
+++ b/source/posts/2014/08-31-podcast-02-29.md.erb
@@ -30,6 +30,7 @@ main_image: "/images/static/02/0229.png"
  - [Grabs - front-end development environment](http://grabs.in/)
  - [Pixi-editor - Pixi.js based simple image editor](http://antirek.github.io/pixi-editor/)
  - [JSON Resume](http://jsonresume.org/)
+ - [Flux](http://facebook.github.io/flux/docs/overview.html#content)
 
 READMORE
 
