--- a/source/posts/2014/08-31-podcast-02-29.md.erb
+++ b/source/posts/2014/08-31-podcast-02-29.md.erb
@@ -18,6 +18,7 @@ main_image: "/images/static/02/0229.png"
 
  - [The Lesser-known Features in Rails 4.2](http://www.justinweiss.com/blog/2014/08/25/the-lesser-known-features-in-rails-4-dot-2/)
  - [Optimizing Elasticsearch Searches](https://www.found.no/foundation/optimizing-elasticsearch-searches/)
+ - [The metal](https://github.com/tenderlove/the_metal)
 
 
 ## JavaScript
